# veramoney_apply

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.chainlit  README.md  docker-compose.yml  main.py  pyproject.toml
.chainlit/: config.toml
.claude/skills/async-python-patterns/: SKILL.md
.claude/skills/codebase_changes/: SKILL.md
.claude/skills/docker-optimization/: SKILL.md
.claude/skills/langchain/: SKILL.md
.claude/skills/langfuse_prompt_versioning/: SKILL.md
.claude/skills/prompting/: SKILL.md
.claude/skills/secure_fast_api/: SKILL.md
docs/LangFuse Examples/: 01_testing_datasets_service.py  02_task_helpers.py  03_base_metrics_schema.py  04_celery_task_example.py  05_response_generator.py  06_agent_response_generator.py  07_config_settings.py  langfuse-implementation-guide.md
docs/challenge_tasks/: REQUIREMENTS.md  TASKS_BREAKDOWN.md  code_challenge.md
docs/codechallenge/: INDEX.md
docs/codechallenge/01-project-setup/: tasks.md
docs/codechallenge/02-tools/: stock-tool.md  weather-tool.md
docs/codechallenge/03-agent/: conversational-agent.md
docs/codechallenge/04-api/: endpoints.md
docs/codechallenge/05-architecture/: architecture.md
docs/codechallenge/06-bonus-rag/: rag-pipeline.md
docs/codechallenge/07-bonus-multiagent/: multi-agent.md
docs/codechallenge/08-bonus-observability/: observability.md
docs/codechallenge/09-docker/: docker.md
docs/learning/: README.md
docs/plans/main-111704/: design.md  oop-compliance-audit.md  preferences.md  proposal.md  risks.md  tasks.md
docs/plans/main-68b329/: preferences.md  proposal.md
docs/plans/main-alpaca-stock-prince/: design.md  preferences.md  proposal.md  risks.md  tasks.md
docs/plans/main-bpwaps/: proposal.md
docs/plans/main-finalimprovements/: design.md  preferences.md  proposal.md  risks.md  tasks.md
docs/plans/main-frontend/: design.md  risks.md  tasks.md
docs/reports/: alpaca-stock-api-feasibility.md  app-testing-configuration-report.md  chainlit-integration-guide.md  chromadb-rag-implementation-guide.md  custom-retry-logic-migration-analysis.md  langfuse-auto-initialization.md  langfuse-observability-implementation-guide.md  langfuse-self-hosted-architecture.md  langfuse-testing-evaluation-guide.md  module-constants-class-variable-analysis.md  multi-agent-implementation-guide.md  project-architecture-options.md  proxy-agent-multi-agent-refactor.md  task-implementation-analysis.md  unnecessary-complexity-analysis.md
docs/requests/: docker-compose-dependencies.md  fastapi-application-analysis.md  todo.md
docs/wheather_api/: docs.md
src/agent/: __init__.py  constants.py
src/api/: __init__.py  app.py  dependencies.py  main.py  schemas.py
src/chainlit/: __init__.py  app.py  config.py  constants.py  handlers.py  sse_client.py
src/config/: __init__.py  enums.py  logging.py  settings.py
src/observability/: __init__.py  client.py  datasets.py  handler.py  manager.py  prompts.py
src/prompts/: __init__.py  system.py  workers.py
src/rag/: __init__.py  document_configs.py  loader.py  pipeline.py  retriever.py  schemas.py  splitter.py  vectorstore.py
src/tools/: __init__.py  constants.py
src/utils/: logging.py
(+149 files in other folders)
