[project]
name = "veramoney-apply"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.0",
    "fastapi>=0.129.0",
    "httpx>=0.25.0",
    "langchain>=1.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.10",
    "langfuse>=3.14.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "python-dotenv>=1.2.1",
    "secure>=0.3.0",
    "slowapi>=0.1.9",
    "uvicorn[standard]>=0.41.0",
]
